static/css/page-components/notification-center.scss
@import "../global/_variables.scss";

header .dropdown-shell {
  position: static;

  & > .btn {
    margin-right: .5em;
  }

  .dropdown {
    right: .5em;
    top: 3.7em;
  }
}

header.container .notification-center {
  top: 4.2em;
}

.notification-center {
  padding: 1em;
  width: 16.75em !important;

  .btn.close {
    margin: -.7em -.7em .3em .3em;
  }

  .title {
    font-weight: 500;
    color: $main;
  }

  .notification-list {
    margin: 1em 0;
    max-height: 17.75em;
    width: 100%;
    padding-right: 1em;
    margin-right: 0;
  }

  .notification {
    padding: 1em 0 0;
    border-bottom: 1px solid $disabled-bg;
    overflow: auto;

    .content {
      font-weight: 300;
      font-size: .95rem;
    }

    time {
      color: darken($disabled, 10%);
      margin-top: .5em;
      display: block;
      font-size: .9rem;
    }

    .btn {
      float: right;
    }
  }

  .simplebar-scrollbar {
    width: 5px;
  }

  .simplebar-scrollbar::before {
    opacity: .25;
  }

  .simplebar-offset::before, .simplebar-offset::after {
    content: "";
    position: absolute;
    z-index: 1000;
    left: 0;
    width: 100%;
    height: 3em;
    transition: opacity 300ms;
    pointer-events: none;
  }

  .simplebar-offset::before {
    top: 0;
    background: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, white 100%);
  }

  .simplebar-offset.at-top::before {
    opacity: 0;
  }

  .simplebar-offset::after {
    bottom: 0;
    background: linear-gradient(0deg, white 0%, rgba(255, 255, 255, 0) 100%);
  }

  .simplebar-offset.at-bottom::after {
    opacity: 0;
  }

  .lds-ellipsis {
    display: inline-block;
    position: relative;
    width: 64px;
    height: 64px;

    div {
      position: absolute;
      top: 27px;
      width: 11px;
      height: 11px;
      border-radius: 50%;
      background: lighten(desaturate($main, 70%), 50%);
      animation-timing-function: cubic-bezier(0, 1, 1, 0);

      &:nth-child(1) {
        left: 6px;
        animation: lds-ellipsis1 .6s infinite;
      }

      &:nth-child(2) {
        left: 6px;
        animation: lds-ellipsis2 .6s infinite;
      }

      &:nth-child(3) {
        left: 26px;
        animation: lds-ellipsis2 .6s infinite;
      }

      &:nth-child(4) {
        left: 45px;
        animation: lds-ellipsis3 .6s infinite;
      }
    }

    @keyframes lds-ellipsis1 {
      0% {
        transform: scale(0);
      }

      100% {
        transform: scale(1);
      }
    }

    @keyframes lds-ellipsis3 {
      0% {
        transform: scale(1);
      }

      100% {
        transform: scale(0);
      }
    }

    @keyframes lds-ellipsis2 {
      0% {
        transform: translate(0, 0);
      }

      100% {
        transform: translate(19px, 0);
      }
    }
  }
}

@media only screen and (min-width: 386px) {
  header.container .notification-center {
    top: 4.6em;
  }
}

@media only screen and (min-width: 640px) {
  header.container .notification-center {
    top: 5.2em;
  }
}

@media only screen and (min-width: 1024px) {
  header.container .notification-center {
    right: 8%;
  }
}

